--- a/入居契約、入居者資格入居者資格及び入居開始時期(入力).md
+++ b/入居契約、入居者資格入居者資格及び入居開始時期(入力).md
@@ -1,1 +1,23 @@
-Hello 
+### 画面イメージ
+
+
+### 画面項目
+| No | 項目名称                     | タイプ   | I/O | 必須 | 桁数    | 初期値 | 参照先                  | 備考                                                               |
+| -- | ---------------------------- | -------- | --- | ---- | ------- | ------ | ----------------------- | ------------------------------------------------------------------ |
+| 1  | 入居契約の別                 | checkbox | I   | 〇   | -       | DB値   | 公開用_住宅基本テーブル |                                                                    |
+| 2  | 終身賃貸事業者の事業の認可   | radio    | I   | 〇   | -       | DB値   | 公開用_住宅基本テーブル | 許可を受けている、許可を受けていない選択                           |
+| 3  | 入居者の資格                 | radio    | I   | 〇   | -       | DB値   | 公開用_住宅基本テーブル |                                                                    |
+| 4  | 入居の用に供する前であるか   | radio    | I   | 〇   | -       | DB値   | 公開用_住宅基本テーブル | はい、いいえ選択                                                   |
+| 5  | 入居開始時期                 | select   | I   | 〇   | -       | DB値   | 公開用_住宅基本テーブル | 新様式のみ、カレンダー形式で年＞月＞日で過去も選択できることとする |
+| 6  | 備考欄（新様式のみ【備考】） | textarea | I   | -    | 200文字 | DB値   | 公開用_住宅基本テーブル |                                                                    |
+
+### 画面イベント
+
+| No | 項目名称                   | イベント | 条件             | 内容                            | 備考 |
+| -- | -------------------------- | -------- | ---------------- | ------------------------------- | ---- |
+| 1  | 入居開始時期               | click    |                  | Datepicker を表示する。（新のみ） |      |
+| 2  | 入居の用に供する前であるか | click    | 「はい」選択時   |   入居開始時期が必須となる。<br> 入居開始時期が選択可能となる。|      |
+| 3  | 入居の用に供する前であるか | click    | 「いいえ」選択時 |   入居開始時期が選択不可となる。
+
+
+
