--- a/入居契約、入居者資格入居者資格及び入居開始時期(入力).md
+++ b/入居契約、入居者資格入居者資格及び入居開始時期(入力).md
@@ -1,4 +1,5 @@
 ### 画面イメージ
+<img width="999" height="628" alt="2 2 8 1" src="https://github.com/user-attachments/assets/415179d6-b606-4ce0-b559-98a6655bea9e" />
 
 
 ### 画面項目
